pull in @arcgis/core and render a map

--- a/package.json
+++ b/package.json
@@ -17,10 +17,16 @@
     "lint:js": "eslint .",
     "start": "ember serve",
     "test": "npm-run-all lint:* test:*",
-    "test:ember": "ember test"
+    "test:ember": "ember test",
+    "postinstall": "npx ncp ./node_modules/@arcgis/core/assets ./public/assets"
   },
   "devDependencies": {
+    "@arcgis/core": "^4.17.0-next.20201008",
     "@ember/optional-features": "^2.0.0",
+    "@ember/render-modifiers": "^1.0.2",
+    "@embroider/compat": "^0.24.1",
+    "@embroider/core": "^0.24.1",
+    "@embroider/webpack": "^0.24.1",
     "@glimmer/component": "^1.0.2",
     "@glimmer/tracking": "^1.0.2",
     "babel-eslint": "^10.1.0",
@@ -34,7 +40,6 @@
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.0",
-    "ember-data": "~3.22.0",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.0.2",
     "ember-load-initializers": "^2.1.1",
@@ -43,7 +48,6 @@
     "ember-resolver": "^8.0.2",
     "ember-source": "~3.22.0",
     "ember-template-lint": "^2.14.0",
-    "ember-welcome-page": "^4.0.0",
     "eslint": "^7.11.0",
     "eslint-plugin-ember": "^9.3.0",
     "eslint-plugin-node": "^11.1.0",
