--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
+    "@ember/render-modifiers": "^1.0.2",
     "@glimmer/component": "^1.0.2",
     "@glimmer/tracking": "^1.0.2",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
+    "ember-arcgis": "git+ssh://git@github.com/ArcGIS/ember-arcgis.git#feature/jsdev-4.18",
     "ember-auto-import": "^1.6.0",
     "ember-cli": "~3.22.0",
+    "ember-cli-amd": "git+ssh://git@github.com/esri/ember-cli-amd.git#362ec45",
     "ember-cli-app-version": "^4.0.0",
     "ember-cli-babel": "^7.22.1",
     "ember-cli-dependency-checker": "^3.2.0",
@@ -43,7 +46,6 @@
     "ember-resolver": "^8.0.2",
     "ember-source": "~3.22.0",
     "ember-template-lint": "^2.14.0",
-    "ember-welcome-page": "^4.0.0",
     "eslint": "^7.11.0",
     "eslint-plugin-ember": "^9.3.0",
     "eslint-plugin-node": "^11.1.0",
